[package]
name = "aluring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
uring-sys2 = { git = "https://github.com/topecongiro/uring-sys" }
thiserror = "1.0.31"

[dev-dependencies]
anyhow = "1.0.57"
tempfile = "3.3.0"